
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int error; } ;
typedef int SRC_STATE ;
typedef TYPE_1__ SRC_PRIVATE ;


 int SRC_ERR_NO_ERROR ;

int
src_error (SRC_STATE *state)
{ if (state)
  return ((SRC_PRIVATE*) state)->error ;
 return SRC_ERR_NO_ERROR ;
}
